--- a/application/app/templates/options.html
+++ b/application/app/templates/options.html
@@ -394,8 +394,8 @@
             <label>
                 <input type="checkbox" ng-model="userConfig.experimentalFileWatcher">
                 <span class="label-desc"> Enable Faster Event Based File Watcher</span>
-                <div class="alert alert-info" style="margin-top: 10px" ng-if="userConfig.experimentalFileWatcher">Experimental file watcher improves performance and battery life. Make sure that you remove project from Prepros before deleting project folder from file system. You can disable it if you are having any issues.</div>
             </label>
+            <div class="alert alert-info">Event based file watcher greatly improves performance and battery life. You can disable it if you are having any troubles.</div>
         </div>
 
     </div>
