replaced alertify with backbone notifier

--- a/application/app/assets/scss/_third-party.scss
+++ b/application/app/assets/scss/_third-party.scss
@@ -1,13 +1,4 @@
 @import url("bootstrap.css");
 @import url("source-sans-pro.css");
-@import url("alertify.css");
+@import url("backbone-notifier.css");
 @import url("../icomoon/style.css");
-
-//Alertify overrides
-.alertify-button {
-	color: #fff !important;
-}
-
-.alertify-hidden {
-	top: -20px !important;
-}
