--- a/application/app/templates/title-bar.html
+++ b/application/app/templates/title-bar.html
@@ -18,6 +18,6 @@
 
         <a class="icomoon-arrow-down-right-3" tooltip="Minimize to Tray" data-placement="bottom" ng-click="toTray()"></a>
         <a class="icomoon-minus" tooltip="Minimize" data-placement="bottom" ng-click="minimize()"></a>
-        <a class="icomoon-close" tooltip="Close" data-placement="left" ng-click="close()"></a>
+        <a class="icomoon-close" tooltip="Close" data-placement="left" ng-click="close()" id="title-bar-close-button"></a>
     </div>
 </div>
