--- a/application/app/templates/live-server/index.jade
+++ b/application/app/templates/live-server/index.jade
@@ -41,6 +41,6 @@ html
         h1 Prepros Projects
         - each project in projects
             div.project
-                a(href=project.url) #{project.name}
+                a(href="javascript:return false")(onClick="window.location.port =" + project.port) #{project.name}
         - if (projects.length == 0)
             p No projects found. Hit refresh after adding projects.
