--- a/application/app/assets/scss/_optim-image.scss
+++ b/application/app/assets/scss/_optim-image.scss
@@ -1,3 +1,11 @@
+@-webkit-keyframes spin {
+  0% {
+    -webkit-transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+  }
+}
 .optim-image {
   display: block;
   overflow-x: hidden;
