fixed some notification bugs

--- a/application/app/assets/css/notification.css
+++ b/application/app/assets/css/notification.css
@@ -3,7 +3,8 @@
 @import url("../icomoon/style.css");
 @import url("source-sans-pro.css");
 body{font-family:'SourceSansPro'}
-.notif-window{overflow:auto;background:#fff;-webkit-user-select:none;cursor:default}
+*{overflow:hidden}
+.notif-window{background:#fff;-webkit-user-select:none;cursor:default}
 .notif-container{border-top:4px solid;position:relative;padding:5px 10px;}
 .notif-container .notif-header{display:-webkit-flex;}
 .notif-container .notif-header div{-webkit-flex:1;-webkit-flex-flow:column;}
@@ -16,4 +17,4 @@ body{font-family:'SourceSansPro'}
 .notif-container.success{border-top-color:#078e13;}
 .notif-container.success .notif-icon{color:#078e13}
 .notif-container.success h3{color:#078e13}
-.notif-container .notif-close{display:inline-block;position:absolute;right:10px;top:10px;font-size:14px;color:#bbb}
+.notif-container .notif-close{display:inline-block;position:absolute;right:10px;top:10px;font-size:13px;color:#bbb}
