--- a/application/app/assets/stylus/notification.styl
+++ b/application/app/assets/stylus/notification.styl
@@ -6,8 +6,10 @@
 body
   font-family'SourceSansPro'
 
+*
+  overflow hidden
+
 .notif-window
-  overflow auto
   background #FFF
   -webkit-user-select none
   cursor default
@@ -61,7 +63,7 @@ body
     position absolute
     right 10px
     top 10px
-    font-size 14px
+    font-size 13px
     color #BBB
   
 
