--- a/application/app/assets/stylus/notification.styl
+++ b/application/app/assets/stylus/notification.styl
@@ -3,7 +3,7 @@
 @import url("source-sans-pro.css")
 
 body
-  font-family'SourceSansPro'
+  font-family 'SourceSansPro'
 
 *
   overflow hidden
@@ -22,7 +22,7 @@ body
     display -webkit-flex
     
     div
-      -webkit-flex 1;
+      -webkit-flex 1
       -webkit-flex-flow column
       &.notif-info
         -webkit-flex 5
@@ -64,9 +64,3 @@ body
     top 10px
     font-size 10px
     color #BBB
-  
-
-
-    
-  
-
