--- a/application/app/templates/title-bar.html
+++ b/application/app/templates/title-bar.html
@@ -12,7 +12,7 @@
                 <li><a ng-click="openOptionsWindow()"><i class="icomoon-cog "></i> Prepros Options</a></li>
                 <li><a show-modal-on-click="#aboutModal"><i class="icomoon-info"></i>About Prepros</a></li>
                 <li class="divider"></li>
-                <li><a ng-click="supportAuthor()"><i class="icomoon-heart-2"></i> Donate to Prepros</a></li>
+                <li><a ng-click="supportAuthor()"><i class="icomoon-heart-2"></i>Buy Prepros Pro</a></li>
             </ul>
         </div>
 
