--- a/docs/templates/index.jade
+++ b/docs/templates/index.jade
@@ -17,13 +17,15 @@ body
 					li
 						a(href='projects.html') Projects
 					li
+						a(href='prepros-json.html') Prepros.json
+					li
 						a(href='files.html') Files
 					li
 						a(href='config.html') Configuring Prepros
 					li
 						a(href='live-refresh.html') Live Refresh
 					li
-						a(href='multi-device-live-refresh.html') Multi Device Live Refresh
+						a(href='multi-device-testing.html') Multi Device Testing
 					li
 						a(href='sass-compass.html') Using Sass &amp; Compass
 					li
