--- a/application/app/templates/multi-device.html
+++ b/application/app/templates/multi-device.html
@@ -11,14 +11,15 @@
         <h4>Network Address(es) to access Prepros server</h4>
 
         <ul class="ips" ng-if="addresses.length > 0">
-            <li ng-repeat="address in addresses"><code>http://{{address.ip}}:5656</code> &nbsp; &rarr; for devices inside <code>{{address.name}}</code> network</li>
+            <li ng-repeat="address in addresses">
+                <button popover="<img src='{{address.qr}}'>" class="btn" data-placement="right"><i class="icomoon-qrcode"></i></button>
+                <code>http://{{address.ip}}:5656</code> &nbsp; &rarr; for devices inside <code>{{address.name}}</code> network.
+            </li>
         </ul>
 
         <div class="alert alert-error" ng-if="addresses.length == 0">No networks detected</div>
 
-        <p ng-if="addresses.length > 0">
-            Multi device browser refresh is only available if you are using built in http server.
-            If addresses are not working check your firewall permissions.</p>
+        <p ng-if="addresses.length > 0">If addresses are not working check your firewall permissions.</p>
     </div>
 
     <div class="modal-footer">
