--- a/application/app/templates/sidebar.html
+++ b/application/app/templates/sidebar.html
@@ -2,7 +2,7 @@
     <ul ui-sortable ng-model="projects">
         <li ng-repeat="project in projects" ng-dblclick="openProjectFolder(project.path)" ng-animate="'animate'" project-context-menu="project">
             <a ng-href="#/files/{{project.id}}" draggable="false"
-               ng-class="{'active' : selectedProject.id == project.id}">{{project.name}}</a>
+               ng-class="{'active' : selectedProject.id == project.id}" draggable="false">{{project.name}}</a>
         </li>
     </ul>
 
