--- a/docs/templates/jade/nav.jade
+++ b/docs/templates/jade/nav.jade
@@ -1,14 +1,15 @@
+
 nav
 	.row
+
 		.large-8.small-12.columns
 			a(href="/prepros") Home
 			a(href="/prepros/#download") Download
-			a(href="/prepros/docs/") Docs
-			a(href="/prepros/faq.html") FAQ
-			a(href="/prepros/changelog.html") Changelog
+			a(href="http://alphapixels.com/prepros/docs/") Docs
+			a(href="http://alphapixels.com/prepros/faq.html") FAQ
+			a(href="http://alphapixels.com/prepros/changelog.html") Changelog
 			a(href="http://github.com/sbspk/Prepros") Prepros on Github
-		.paypal-donate.large-4.small-12.columns
-			form(action="https://www.paypal.com/cgi-bin/webscr")(method="post")(target="_blank")
-				input(type="hidden")(name="cmd")(value="_s-xclick")
-				input(type="hidden")(name="hosted_button_id")(value="EGLVFC4YQK7WL")
-				input(type="image")(src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif")(name="submit")(alt="PayPal - The safer, easier way to pay online!")(onClick="ga('send', 'event', 'Donate Top');")
+		.large-4.small-12.columns
+			.nav-buy-button
+				a(href="http://alphapixels.com/prepros/pro.html").
+					Prepros Pro
