one click ftp deployment closes #270

--- a/application/app/assets/scss/_bs-custom.scss
+++ b/application/app/assets/scss/_bs-custom.scss
@@ -2,7 +2,7 @@ input:focus, select:focus, select:active {
   box-shadow: none !important;
 }
 
-input[type='text'] {
+input[type='text'], input[type='password'] {
   border: 1px solid #BBB;
   border-radius: 0;
   padding: 3px 8px;
