--- a/application/app/templates/project-options.html
+++ b/application/app/templates/project-options.html
@@ -44,13 +44,13 @@
                     <input type="text" ng-model="selectedProject.config.cssPath" class="span5">
                 </label>
 
-                <div class="label-desc label-block js-options">
+                <div class="label-desc label-block side-by-side-options">
                     <label for="config-js-folder" class="span3">Js Folder</label>
                     <label for="config-jsmin-folder" class="span2">Js MinFolder</label>
                 </div>
 
-                <input type="text" ng-model="selectedProject.config.jsPath" class="span3" id="config-js-folder">
-                <input type="text" ng-model="selectedProject.config.jsMinPath" class="span2" id="config-jsmin-folder">
+                <input type="text" ng-model="selectedProject.config.jsPath" class="span3 side-by-side-option-first" id="config-js-folder">
+                <input type="text" ng-model="selectedProject.config.jsMinPath" class="span2  side-by-side-option-second" id="config-jsmin-folder">
 
                 <label>
                     <span class="label-desc label-block">HTML Folder</span>
