--- a/application/app/templates/sidebar.html
+++ b/application/app/templates/sidebar.html
@@ -12,6 +12,7 @@
         <a class="icomoon-images" tooltip="Optimize Images" ng-href="#optim/{{ selectedProject.id }}"></a>
         <div class="icomoon-globe" tooltip="Open project live url" ng-click="openLiveUrl()"></div>
         <div class="icomoon-remove" tooltip="Remove project" ng-click="removeProject()"></div>
+        <div class="icomoon-arrow-up" tooltip="Buy Prepros Pro for One Click FTP Upload &amp; Deployment" ng-click="ftpDeploy()"></div>
     </div>
 
 </div>
