--- a/docs/templates/index.jade
+++ b/docs/templates/index.jade
@@ -31,7 +31,7 @@ body
 					li
 						a(href='image-optimization.html') Image Optimization
 					li
-						a(href='js-concat-minify.html') Js Conatenation and Minification
+						a(href='js-concat-minify.html') Js Concatenation and Minification
 					li
 						a(href='less.html') Using LESS
 					li
