--- a/docs/templates/jade/nav.jade
+++ b/docs/templates/jade/nav.jade
@@ -11,5 +11,5 @@ nav
 			a(href="http://github.com/sbspk/Prepros") Prepros on Github
 		.large-4.small-12.columns
 			.nav-buy-button
-				a(href="http://alphapixels.com/prepros/pro.html").
+				a(href="http://alphapixels.com/prepros/pro/").
 					Prepros Pro
