Option to disable file watcher for each project
closes #329, closes #284

--- a/application/app/assets/scss/_sidebar.scss
+++ b/application/app/assets/scss/_sidebar.scss
@@ -11,6 +11,31 @@
     padding: 0;
     height: 450px;
     list-style: none;
+
+
+    li {
+
+      position: relative;
+      display: block;
+
+      &::after {
+
+        display: inline-block;
+        width: 8px;
+        height: 8px;
+        border-radius: 4px;
+        background: #afafaf;
+        content: '';
+        position: absolute;
+        top: 20px;
+        right: 15px;
+      }
+
+      &.project-being-watched::after {
+        background: lighten(green, 5%);
+      }
+    }
+
     li a {
       display: block;
       padding-left: 15px;
