Tweaked sidebar link widths to better fill the space Tweaked "watched" project dots Added proper cursor to title bar items

--- a/application/app/assets/scss/_titlebar.scss
+++ b/application/app/assets/scss/_titlebar.scss
@@ -22,7 +22,7 @@
       line-height: 30px;
       text-align: center;
       text-decoration: none;
-      cursor: default;
+      cursor: pointer;
       &.highlight {
         color: rgba(250, 86, 33, 1);
       }
