--- a/application/app/assets/scss/_sidebar.scss
+++ b/application/app/assets/scss/_sidebar.scss
@@ -29,10 +29,12 @@
         position: absolute;
         top: 20px;
         right: 15px;
+        opacity: .5;
       }
 
       &.project-being-watched::after {
         background: lighten(green, 5%);
+        opacity: 1;
       }
     }
 
@@ -70,7 +72,7 @@
     div, a {
       display: inline-block;
       height: 25px;
-      width: 25px;
+      width: 27px;
       line-height: 25px;
       color: #a9a9a9;
       text-align: center;
