Added c:p to individual files

--- a/application/app/assets/scss/_files.scss
+++ b/application/app/assets/scss/_files.scss
@@ -62,7 +62,7 @@ $duration : .5s;
       border: 1px solid #dbd7d7;
       background: #fff;
       list-style: none;
-      cursor: default;
+      cursor: pointer;
       overflow: hidden;
       &:hover {
         border: 1px solid #f1dbd2;
