Final(?) cursor pointer required to mark all interactable items

--- a/application/app/assets/scss/_sidebar.scss
+++ b/application/app/assets/scss/_sidebar.scss
@@ -78,6 +78,7 @@
       text-align: center;
       -webkit-transform: scale(0, 0);
       -webkit-transition: -webkit-transform .3s;
+      cursor: pointer;
       &:hover {
         color: #fff;
         text-decoration: none;
