Fix retina rendering of titlebar dropdown menu.
Removes -webkit-filter dropshadow from the titlebar menu's dropdown.
Replaces the separation between the caret and background with another
border on the caret.

--- a/application/app/assets/scss/_titlebar.scss
+++ b/application/app/assets/scss/_titlebar.scss
@@ -63,6 +63,19 @@
         border-bottom: 6px solid white;
         border-left: 6px solid transparent;
         content: '';
+        pointer-events: none;
+      }
+      &::before {
+        position: absolute;
+        top: -7px;
+        right: 9px;
+        display: inline-block;
+        width: 0;
+        border-right: 7px solid transparent;
+        border-bottom: 7px solid rgba(0, 0, 0, 0.4);
+        border-left: 7px solid transparent;
+        content: '';
+        pointer-events: none;
       }
     }
   }
