--- a/application/app/assets/scss/_titlebar.scss
+++ b/application/app/assets/scss/_titlebar.scss
@@ -47,8 +47,7 @@
 
     .dropdown-menu {
       text-align: left;
-      -webkit-filter: drop-shadow(0px 0px 5px rgba(0,0,0,.4));
-      box-shadow: none;
+      box-shadow: 0px 0px 5px rgba(0,0,0,.4);;
       i {
         display: inline-block;
         margin-right: 5px;
