--- a/application/app/partials/files.html
+++ b/application/app/partials/files.html
@@ -1,5 +1,5 @@
 <a ng-repeat="file in selectedProjectFiles"
-   ng-href="#/{{routeSubPath.toLowerCase() || 'files' }}/{{file.pid}}/{{file.id}}"
+   ng-href="#/files/{{file.pid}}/{{file.id}}"
    class="files-list__item files-list__item--{{file.type.toLowerCase()}}"
    ng-class="{'files-list__item--active' : file.id == selectedFile.id || multiSelect.files[file.id]}"
    ng-dblclick="openFile(file.pid, file.id)"
