restore old trash icon closes #408

--- a/application/app/partials/footer.html
+++ b/application/app/partials/footer.html
@@ -25,7 +25,7 @@
     </div>
 
     <div class="project-toolbar__item" ng-click="removeProject(selectedProject.id)">
-        <i class="icon-remove project-toolbar__item__icon" tooltip="Remove Project"></i>
+        <i class="icon-remove-2 project-toolbar__item__icon" tooltip="Remove Project"></i>
     </div>
 
     <div class="project-toolbar__item project-toolbar__item--dropdown dropup">
