--- a/application/app/partials/app-options.html
+++ b/application/app/partials/app-options.html
@@ -266,7 +266,7 @@
 			<span>Debug Info</span>
 		</label>
 
-		<label ng-hide="config.sass.compass && config.sass.fullCompass || !PREPROS.PLATFORM_WINDOWS " class="app-option__pannel__label">
+		<label ng-hide="config.sass.compass && config.sass.fullCompass" class="app-option__pannel__label">
 			<input type="checkbox" ng-model="config.sass.sourcemaps">
 			<span>SourceMaps</span>
 		</label>
