--- a/application/app/partials/file-types/scss.html
+++ b/application/app/partials/file-types/scss.html
@@ -23,7 +23,7 @@
 	<span class="label-desc">Debug Info</span>
 </label>
 
-<label ng-hide=" (selectedFile.config.compass && selectedFile.config.fullCompass) || !PREPROS.PLATFORM_WINDOWS ">
+<label ng-hide=" (selectedFile.config.compass && selectedFile.config.fullCompass)">
 	<input type="checkbox" ng-model="selectedFile.config.sourcemaps">
 	<span class="label-desc">SourceMaps</span>
 </label>
